# changelog-parser

./: CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS  renovate.json
.github/workflows/: changelog_checks.yml  deploy.yml  publish.yml  pull_request_checks.yml  test.yml  testing.yml
src/: __init__.py
test/: conftest.py  test_load.py
