[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "changelog-parser"
description = "Parses changelog files"
readme = "README.md"
requires-python = ">= 3.8"
license.file = "LICENSE"
authors = [
  { name = "Jason Stiefel", email = "Jason.R.Stiefel@gmail.com" }
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
urls.homepage = "https://github.com/JasonStiefel/changelog-parser"
urls.changelog = "https://github.com/JasonStiefel/changelog-parser/blob/main/CHANGELOG.md"
dynamic = [ "version" ]

dependencies = [
  "semver"
]

[tool.setuptools.dynamic]
version = { attr = "changelog.__version__" }

[project.optional-dependencies]
test = [
  "pytest",
  "coverage",
  "pytest-xdist"
]

[tool.pytest.ini_options]
log_cli_level = "info"
testpaths = [ "test" ]

[tool.coverage.run]
branch = true
source_pkgs = [ "changelog" ]

[tool.setuptools.package-dir]
changelog = "src"
